<resources>
    <string name="app_name">FragmentsBonus</string>
    <string name="WelcometoQuickPrep">Welcome to QuickPrep!</string>
    <string name="Effortless">Effortless cooking starts here.</string>
    <string name="GetFreshIngredients">Get fresh ingredients delivered and cook</string>
    <string name="DeliciousRecipes">delicious recipes in minutes.</string>
    <string name="GetStarted">Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Signupemail">Sign up with email</string>
    <string name="socialsignup">Or use social sign up</string>
    <string name="facebookway">Continue with Facebook</string>
    <string name="googleway">Continue with Google</string>
    <string name="haveaccount">Already have account?</string>
    <string name="login">Login</string>
    <string name="creatNewAccount">Create your Account</string>
    <string name="enteremail">E-mail</string>
    <string name="enterPassword">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="Signup">Sign up</string>
    <string name="LoginButton">Login</string>
    <string name="LoginCaption">Login</string>
    <string name="welcome">Hello, </string>
    <string name="description">description</string>
    <string name="title">Title</string>
    <string name="planner">Planner</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="no_meals_planned">No meals planned for this date</string>
    <string name="add_meal">Add Meal</string>
    <string name="default_web_client_id">740781462145-nfadb8hsk4mq73huve69j4gqcoqoa20e.apps.googleusercontent.com</string>

</resources>