<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBoarding">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="306dp"
        android:layout_height="276dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="53dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/food_image" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="79dp"
        android:gravity="center"
        android:text="@string/WelcometoQuickPrep"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="528dp"
        android:layout_marginEnd="99dp"
        android:maxLines="1"
        android:text="@string/Effortless"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="63dp"
        android:maxLines="1"
        android:text="@string/GetFreshIngredients"
        android:textColor="#020202"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="105dp"
        android:text="@string/DeliciousRecipes"
        android:textColor="#050505"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv3" />

    <Button
        android:id="@+id/signup_email"
        android:layout_width="334dp"
        android:layout_height="56dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="664dp"
        android:layout_marginEnd="39dp"
        android:background="#B82626"
        android:hapticFeedbackEnabled="false"
        android:text="@string/GetStarted"
        android:textColor="#F2F2F2"
        android:textColorLink="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintCircleRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>