<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E02222"
    android:backgroundTint="#E02222"
    tools:context=".LoginOptions">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="510dp"
                android:layout_height="435dp"
                android:layout_marginBottom="514dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/img" />

            <View
                android:id="@+id/gradientOverlay"
                android:layout_width="413dp"
                android:layout_height="412dp"
                android:background="@drawable/gradient2"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/button"
                android:layout_width="334dp"
                android:layout_height="56dp"
                android:layout_marginTop="24dp"
                android:background="#1D1D1D"
                android:fontFamily="@font/montserrat_bold"
                android:hapticFeedbackEnabled="false"
                android:text="@string/Signupemail"
                android:textColor="#F2F2F2"
                android:textColorLink="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintCircleRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

            <View
                android:id="@+id/divider1"
                android:layout_width="50sp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="392dp"
                android:background="#FAFAFA"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/button" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/socialsignup"
                android:textColor="#F2F2F2"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/divider2"
                app:layout_constraintHorizontal_bias="0.477"
                app:layout_constraintStart_toEndOf="@+id/divider1"
                tools:layout_editor_absoluteY="518dp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="50sp"
                android:layout_height="1dp"
                android:layout_marginEnd="16dp"
                android:background="#FAFAFA"
                app:layout_constraintEnd_toEndOf="@+id/button"
                tools:layout_editor_absoluteY="529dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="334dp"
                android:layout_height="56dp"
                android:layout_marginTop="48dp"
                android:background="#FAFAFA"
                android:fontFamily="@font/montserrat_bold"
                android:hapticFeedbackEnabled="false"
                android:text="@string/googleway"
                android:textColor="#1D1D1D"
                android:textColorLink="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintCircleRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/button3"
                android:layout_width="334dp"
                android:layout_height="56dp"
                android:layout_marginTop="24dp"
                android:background="#FAFAFA"
                android:fontFamily="@font/montserrat_bold"
                android:hapticFeedbackEnabled="false"
                android:text="@string/facebookway"
                android:textColor="#1D1D1D"
                android:textColorLink="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintCircleRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/haveaccount"
                android:textColor="#F2F2F2"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/button3"
                app:layout_constraintTop_toBottomOf="@+id/button3" />

            <Button
                android:id="@+id/textButton"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="81dp"
                android:layout_height="41dp"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/login"
                android:textColor="#F2F2F2"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/button3" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>